詳細画面から次の会社の詳細画面を表示できるようにした